<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_arkaplan"
    tools:context=".YanlisGittiActivity">

    <TextView
        android:id="@+id/yanlisGittitextView"
        android:layout_width="269dp"
        android:layout_height="222dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/yanlisGitti"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/yaziRengi_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/tekrarBaslabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:onClick="basaDon"
        android:text="@string/tekrarBasla"
        android:textColor="@color/yaziRengi_2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/internettextView"
        android:layout_width="335dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/internetteSikinti"
        android:textAlignment="center"
        android:textColor="@color/yaziRengi_1"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yanlisGittitextView" />

    <TextView
        android:id="@+id/sunucutextView"
        android:layout_width="335dp"
        android:layout_height="111dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/sunucudaSikinti"
        android:textAlignment="center"
        android:textColor="@color/yaziRengi_1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tekrarBaslabutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/internettextView" />

</android.support.constraint.ConstraintLayout>